<resources>
    <string name="app_name">Laba8</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="create_account">Create account</string>

    <string name="console">Console</string>
    <string name="collection">Collection</string>
    <string name="graphics">Graphics</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="quit">Quit</string>
    <string name="current_login">Current login</string>
    <string name="language">Language</string>

    <string name="request">Request</string>
    <string name="submit">Submit</string>
    <string name="loginError">Wrong login/password</string>
</resources>