<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:text="@string/current_login"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/currentLogin_settingsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:textSize="25dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/quitButton_settingsFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:text="@string/language"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/languageSelector_SettingsFragment"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>